--- a/sp5-chap16/pom.xml
+++ b/sp5-chap16/pom.xml
@@ -73,7 +73,7 @@
 			<artifactId>hibernate-validator</artifactId>
 			<version>5.4.2.Final</version>
 		</dependency>
-
+		<!-- Jackson core와 Jackson Annotation 의존 추가 -->
 		<dependency>
 			<groupId>com.fasterxml.jackson.core</groupId>
 			<artifactId>jackson-databind</artifactId>
